# i3-pager

./: .gitignore  .vscode-ctags  CMakeLists.txt  README.md  plasmashell-20230727-181830.kcrash
plasmoid/: metadata.desktop  metadata.json
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: configMatchingRules.qml  main.qml
src/: CMakeLists.txt  i3pager.cpp  i3pager.h  plugin.cpp
